--- a/client/admin.html
+++ b/client/admin.html
@@ -7,7 +7,7 @@
 </head>
 <body style="background-color: black; color: aliceblue;">
     <h1>islam DZL</h1>
-    <audio id="audioPlayer" controls></audio>
+    <video id="audioPlayer" controls></video>
     <script src="/admin.js"></script>
 </body>
 </html>
