--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sounder</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="/style.css">
+    <title>Video Stream</title>
+    <style>
+        .T { display: block; }
+        .F { display: none; }
+    </style>
 </head>
 <body>
-    <h1>islam DZ</h1>
-    <div class="buttons">
-        <button id="start" class="B"><h1>Start</h1></button>
-        <button id="stop" class="F"><h1>Stop</h1></button>
-    </div>
-    <script src="/index.js"></script>
+    <h1>ISLAMDZL >>> Stream</h1>
+    <button id="start" class="T">Start Streaming</button>
+    <button id="stop" class="F">Stop Streaming</button>
+    <video id="video" controls></video>
+    <script src="script.js"></script>
 </body>
 </html>
