--- a/publ/admin.html
+++ b/publ/admin.html
@@ -62,7 +62,7 @@
     </div>
 
     <script>
-    const webSocketUrl = "wss://.sounder.onrender.com" // ws://192.168.178.90:2007
+    const webSocketUrl = "wss://sounder.onrender.com" // ws://192.168.178.90:2007
     let sourceBuffer;
     let mediaSource;
     const video = document.getElementById('video')
