--- a/publ/admin.html
+++ b/publ/admin.html
@@ -6,10 +6,6 @@
     <title>sunder admin</title>
     <style>
         @font-face {
-            font-family: '1';
-            src: url(1.ttf) format('truetype');
-        }
-        @font-face {
             font-family: 'numbrs';
             src: url(numbrs.ttf) format('truetype');
         }
@@ -62,7 +58,7 @@
     </div>
 
     <script>
-    const webSocketUrl = "wss://.sounder.onrender.com" // ws://192.168.178.90:2007
+    const webSocketUrl = "wss://sounder.onrender.com" // ws://192.168.178.90:2007
     let sourceBuffer;
     let mediaSource;
     const video = document.getElementById('video')
