--- a/publ/admin.html
+++ b/publ/admin.html
@@ -58,7 +58,7 @@
     </div>
 
     <script>
-    const webSocketUrl = "ws://192.168.178.90:2007" // ws://192.168.178.90:2007   wss://sounder.onrender.com
+    const webSocketUrl = "wss://sounder.onrender.com" // ws://192.168.178.90:2007   wss://sounder.onrender.com
     let sourceBuffer;
     let mediaSource;
     const video = document.getElementById('video')
