--- a/publ/admin.html
+++ b/publ/admin.html
@@ -3,92 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>sunder admin</title>
+    <title>Admin Page</title>
     <style>
-        @font-face {
-            font-family: 'numbrs';
-            src: url(numbrs.ttf) format('truetype');
-        }
         body {
-            background-color: rgb(22, 22, 22);
+            background-color: #161616;
             color: aliceblue;
             text-align: center;
         }
-        #title {
-            font-family: '1', sans-serif;
-            color: red;
+        #video {
+            width: 80%;
+            height: 500px;
         }
-        video {
-            width: 100%;
-            height: 400px;
+        #code-custom, #set-code {
+            margin-top: 20px;
         }
         #code-custom {
             width: 80%;
             height: 40px;
             border-radius: 20px;
             border: none;
-            margin-top: 30px;
-            outline-color: blue;
-            background-color: rgb(12,12,12);
-            text-align: center;
+            background-color: #0c0c0c;
             color: aliceblue;
-            font-size: 30px;
-            font-family: 'numbrs', sans-serif;
+            font-size: 24px;
         }
         #set-code {
             overflow: hidden;
             height: 60px;
             width: 100px;
             border-radius: 40px;
-            background-color: rgb(12,12,12);
-            margin-top: 30px;
-        }
-        #hcode {
-            font-family: '1', sans-serif;
-            color: blue;
+            background-color: #0c0c0c;
+            border: none;
+            color: aliceblue;
+            font-size: 24px;
         }
     </style>
 </head>
 <body>
-    <h1 id="title">islam DZL</h1>
+    <h1>Admin Page</h1>
     <video id="video" controls autoplay></video>
-    <div style="display: inline-block">
-        <input type="text" id="code-custom">
-        <button id="set-code"><h3 id="hcode">Set Code</h3></button>
+    <div>
+        <input type="text" id="code-custom" placeholder="Enter code">
+        <button id="set-code">Set Code</button>
     </div>
-
     <script>
-    const webSocketUrl = "wss://sounder.onrender.com" // ws://192.168.178.90:2007   wss://sounder.onrender.com
-    let sourceBuffer;
-    let mediaSource;
-    const video = document.getElementById('video')
-    const set_code  = document.getElementById('set-code')
-    const code_custom = document.getElementById('code-custom')
-    const socket = new WebSocket(webSocketUrl)
-    socket.onopen = ()=>{
-        window.alert('connection on web socket Server!')
-        mediaSource = new MediaSource();
-        video.src = URL.createObjectURL(mediaSource);
-        mediaSource.addEventListener('sourceopen', () => {
-            sourceBuffer = mediaSource.addSourceBuffer('video/webm; codecs=vp8,opus');
-            sourceBuffer.mode = 'sequence';
+        const socket = new WebSocket('wss://sounder.onrender.com'); // تأكد من صحة عنوان الخادم
+        const video = document.getElementById('video');
+        const codeCustom = document.getElementById('code-custom');
+        const setCodeButton = document.getElementById('set-code');
+        let mediaSource;
+        let sourceBuffer;
+
+        socket.onopen = () => {
+            console.log('WebSocket connection opened');
+            mediaSource = new MediaSource();
+            video.src = URL.createObjectURL(mediaSource);
+            mediaSource.addEventListener('sourceopen', () => {
+                sourceBuffer = mediaSource.addSourceBuffer('video/webm; codecs=vp8,opus');
+                sourceBuffer.mode = 'sequence';
+            });
+        };
+
+        socket.onmessage = (event) => {
+            const data = JSON.parse(event.data);
+            if (data.stream) {
+                const videoBlob = new Blob([data.stream], { type: 'video/webm' });
+                const reader = new FileReader();
+                reader.onload = () => {
+                    const arrayBuffer = reader.result;
+                    if (sourceBuffer && !sourceBuffer.updating) {
+                        sourceBuffer.appendBuffer(arrayBuffer);
+                    }
+                };
+                reader.readAsArrayBuffer(videoBlob);
+            }
+        };
+
+        setCodeButton.addEventListener('click', () => {
+            const key = codeCustom.value;
+            socket.send(JSON.stringify({ set_key: key }));
         });
-    }
-    socket.onmessage = (event)=>{
-        console.log('message')
-        const videoblob = new Blob([JSON.parse(event.data).strem],{type:'/webm'})
-        const reader = new FileReader()
-        reader.onload = ()=>{
-            const arrayBuffer = reader.result;
-            sourceBuffer.appendBuffer(arrayBuffer)
-        }
-        reader.readAsArrayBuffer(videoblob)
-    }
-    set_code.addEventListener('click',()=>{
-        socket.send(JSON.stringify({
-            set_key:code_custom.value
-        }))
-    })
-</script>
+    </script>
 </body>
 </html>
