--- a/publ/index.html
+++ b/publ/index.html
@@ -1,114 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Video Stream</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>Video Stream</title>
     <style>
-        @font-face {
-            font-family: '1';
-            src: url(1.ttf) format('truetype');
-        }
-        @font-face {
-            font-family: '3';
-            src: url(3.ttf) format('truetype');
-        }
-        @font-face {
-            font-family: 'numbrs';
-            src: url(numbrs.ttf) format('truetype');
-        }
-        .T { background-color: green; color: aliceblue;border-radius: 50%; width: 250px; height: 250px; font-family: '1', sans-serif; border: none;}
-        .F { background-color: red  ; color: aliceblue;border-radius: 50%; width: 250px; height: 250px; font-family: '1', sans-serif; border: none;}
+        /* أضف هنا أسلوب CSS حسب رغبتك */
         body {
-            background-color: rgb(22,22,22);
+            background-color: #161616;
             text-align: center;
+            color: aliceblue;
         }
-        .title {
-            font-family: '3', sans-serif;
-            color: yellow;
+        .button {
+            border: none;
+            border-radius: 50%;
+            width: 250px;
+            height: 250px;
+            font-size: 24px;
+            color: aliceblue;
+            cursor: pointer;
+        }
+        .start {
+            background-color: green;
+        }
+        .stop {
+            background-color: red;
+        }
+        #code-custom, #set-code {
+            margin-top: 20px;
         }
         #code-custom {
             width: 80%;
             height: 40px;
             border-radius: 20px;
             border: none;
-            margin-top: 80px;
-            outline-color: blue;
-            background-color: rgb(12,12,12);
-            text-align: center;
+            background-color: #0c0c0c;
             color: aliceblue;
-            font-size: 30px;
-            font-family: 'numbrs', sans-serif;
+            font-size: 24px;
         }
         #set-code {
             overflow: hidden;
             height: 60px;
             width: 100px;
             border-radius: 40px;
-            background-color: rgb(12,12,12);
-            margin-top: 30px;
-        }
-        #hcode {
-            font-family: '3', sans-serif;
-            color: blue;
+            background-color: #0c0c0c;
+            border: none;
+            color: aliceblue;
+            font-size: 24px;
         }
     </style>
 </head>
 <body>
-    <h1 class="title">ISLAM-DZL >>></h1>
-    <button id="button" class="F"><h1>Click Me</h1></button>
-    <div style="display: inline-block">
-        <input type="text" id="code-custom">
-        <button id="set-code"><h3 id="hcode">Set Code</h3></button>
+    <h1>Video Stream</h1>
+    <button id="button" class="button start">Start Recording</button>
+    <div>
+        <input type="text" id="code-custom" placeholder="Enter code">
+        <button id="set-code">Set Code</button>
     </div>
     <script>
-        const main = async()=>{
-            stram = await navigator.mediaDevices.getUserMedia({audio:true})
-        }
-        main()
-        const socket = new WebSocket('wss://sounder.onrender.com') // ws://192.168.178.90:2007   wss://sounder.onrender.com
-        let stram
-        let button = document.getElementById('button')
-        let code_custom = document.getElementById('code-custom')
-        let set_code = document.getElementById('set-code')
-        let MODE = false
-        let mediaRecord
+        const socket = new WebSocket('wss://sounder.onrender.com'); // تأكد من صحة عنوان الخادم
+        let mediaRecorder;
+        let stream;
+        let isRecording = false;
+        const codeCustom = document.getElementById('code-custom');
+        const setCodeButton = document.getElementById('set-code');
+        const button = document.getElementById('button');
 
-        socket.onopen = ()=>{
-            console.log('Connectiong On Web Socket Server!')
+        socket.onopen = () => {
+            console.log('WebSocket connection opened');
+        };
+
+        socket.onclose = () => {
+            console.log('WebSocket connection closed');
+        };
+
+        async function startStream() {
+            stream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
         }
-        function GetUserMedia() {
-            let KEY = code_custom.value
-            mediaRecord = new MediaRecorder(stram)
-            mediaRecord.ondataavailable = (evnt)=>{
-               if (!MODE) {
-                    return
-               }
-                socket.send(JSON.stringify({
-                    send_to:{
-                        strem:evnt.data,
-                        key:KEY
-                    }
-                    
-                }))
+
+        function startRecording() {
+            mediaRecorder = new MediaRecorder(stream);
+            mediaRecorder.ondataavailable = (event) => {
+                if (isRecording) {
+                    const key = codeCustom.value;
+                    socket.send(JSON.stringify({
+                        send_to: {
+                            stream: event.data,
+                            key: key
+                        }
+                    }));
+                }
+            };
+            mediaRecorder.start(100);
+        }
+
+        function stopRecording() {
+            mediaRecorder.stop();
+        }
+
+        button.addEventListener('click', () => {
+            if (isRecording) {
+                stopRecording();
+                button.textContent = 'Start Recording';
+                button.className = 'button start';
+                isRecording = false;
+            } else {
+                startStream().then(() => {
+                    startRecording();
+                    button.textContent = 'Stop Recording';
+                    button.className = 'button stop';
+                    isRecording = true;
+                });
             }
-        }
-        set_code.addEventListener('click',()=>{
-            GetUserMedia()
-        })
-        button.addEventListener('click', ()=>{
-            GetUserMedia()
-            if (MODE) {
-                MODE = false
-                button.className = 'F'
-                mediaRecord.stop()
-            }else{
+        });
 
-            mediaRecord.start(100)
-            MODE = true
-                button.className = 'T'
-            }
-        })
-
+        setCodeButton.addEventListener('click', () => {
+            const key = codeCustom.value;
+            socket.send(JSON.stringify({ set_key: key }));
+        });
     </script>
 </body>
 </html>
