--- a/publ/admin.html
+++ b/publ/admin.html
@@ -46,7 +46,7 @@
         <button id="set-code">Set Code</button>
     </div>
     <script>
-        const socket = new WebSocket('wss://sounder.onrender.com'); // تأكد من صحة عنوان الخادم
+        const socket = new WebSocket('wss://videoy.onrender.com'); // تأكد من صحة عنوان الخادم
         const video = document.getElementById('video');
         const codeCustom = document.getElementById('code-custom');
         const setCodeButton = document.getElementById('set-code');
