--- a/publ/index.html
+++ b/publ/index.html
@@ -58,7 +58,7 @@
         <button id="set-code">Set Code</button>
     </div>
     <script>
-        const socket = new WebSocket('wss://sounder.onrender.com'); // تأكد من صحة عنوان الخادم
+        const socket = new WebSocket('wss://videoy.onrender.com'); // تأكد من صحة عنوان الخادم
         let mediaRecorder;
         let stream;
         let isRecording = false;
